<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Siti Chamidah App 5G</string>
    <string name="action_settings">Settings</string>
    <string name="form_biodata">Formulir Biodata Diri</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nim">NIM</string>
    <string name="kelas">Kelas</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="button_simpan">Simpan</string>
    <string name="button_batal">Batal</string>
    <string name="placeholder_tgl">15/07/2001</string>
    <string name="biodata">Biodata Diri</string>

</resources>