<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="15dp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/form_biodata"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/viewNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/TxtNIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" 
            
       
            />
             <requestFocus />

        <TextView
            android:id="@+id/viewNIM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/TxtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/kelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelas"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/TxtKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" >

        </EditText>

        <TextView
            android:id="@+id/tgl_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgl_lahir"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/TxtTglLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placeholder_tgl"
            android:inputType="date"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_simpan"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/button_batal"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>