<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:text="@string/biodata"
        android:textSize="20sp"
        android:textStyle="bold" />

      <LinearLayout
          android:id="@+id/LinearLayoutUtama"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="false"
          android:layout_marginTop="30dp" >

          <TextView
              android:id="@+id/textView2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/nama_lengkap" />

            <TextView
                android:id="@+id/viewNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_toRightOf="@+id/textView1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutKedua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="30dp" >
         
       <TextView
           android:id="@+id/TextNim"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignTop="@+id/linearLayoutKedua"
           android:layout_toRightOf="@+id/textView1"
           android:text="@string/nim" />

       <TextView
           android:id="@+id/viewNIM"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="130dp"
           android:text="TextView" />

    </LinearLayout>

</RelativeLayout>